Refactor DocumentService to return image & pdfDoc bytes