@@ -3,6 +3,7 @@ package com.nakamas.hatfieldbackend.controllers;
 import com.nakamas.hatfieldbackend.models.entities.shop.InventoryItem;
 import com.nakamas.hatfieldbackend.models.entities.ticket.Invoice;
 import com.nakamas.hatfieldbackend.models.entities.ticket.Ticket;
+import com.nakamas.hatfieldbackend.models.views.outgoing.PdfAndImageDoc;
 import com.nakamas.hatfieldbackend.services.DocumentService;
 import com.nakamas.hatfieldbackend.services.InventoryItemService;
 import com.nakamas.hatfieldbackend.services.InvoiceService;
@@ -15,11 +16,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -32,43 +29,41 @@ public class DocumentController {
     private final InvoiceService invoiceService;
 
     //todo: Assign the qrcodes to redirect to the frontend page that shows data of the item.
-    @PostMapping(value = "print/ticket", produces = MediaType.IMAGE_PNG_VALUE)
-    private ResponseEntity<byte[]> printTicket(@RequestParam Long ticketId) throws IOException {
+    @PostMapping(value = "print/ticket", produces = MediaType.APPLICATION_PDF_VALUE)
+    private ResponseEntity<byte[]> printTicket(@RequestParam Long ticketId) {
         Ticket ticket = ticketService.getTicket(ticketId);
-//        todo: Add the initial username-password somewhere in the user to do easy access
-        File image = documentService.createTicket(ticket.getClient().getEmail(), ticket);
-        documentService.executePrint(image);
-        byte[] bytes = Files.readAllBytes(image.toPath());
-        return ResponseEntity.ok().contentType(MediaType.IMAGE_JPEG).body(bytes);
+        PdfAndImageDoc doc = documentService.createTicket(ticket.getClient().getEmail(), ticket);
+        documentService.executePrint(doc.image());
+        byte[] bytes = doc.pdfBytes();
+        return ResponseEntity.ok().contentType(MediaType.APPLICATION_PDF).body(bytes);
     }
-    @PostMapping(value = "print/invoice", produces = MediaType.IMAGE_PNG_VALUE)
-    private ResponseEntity<byte[]> printInvoice(@RequestParam Long invoiceId) throws IOException {
+    @PostMapping(value = "print/invoice", produces = MediaType.APPLICATION_PDF_VALUE)
+    private ResponseEntity<byte[]> printInvoice(@RequestParam Long invoiceId) {
         Invoice invoice = invoiceService.getById(invoiceId);
 //        todo: edit the qr information
-        File image = documentService.createInvoice("QR", invoice);
-        documentService.executePrint(image);
-        byte[] bytes = Files.readAllBytes(image.toPath());
-        return ResponseEntity.ok().contentType(MediaType.IMAGE_JPEG).body(bytes);
+        PdfAndImageDoc doc = documentService.createInvoice("QR", invoice);
+        documentService.executePrint(doc.image());
+        byte[] bytes = doc.pdfBytes();
+        return ResponseEntity.ok().contentType(MediaType.APPLICATION_PDF).body(bytes);
     }
 
-    @PostMapping(value = "print/tag/repair", produces = MediaType.IMAGE_PNG_VALUE)
-    private ResponseEntity<byte[]> printRepairTag(@RequestParam Long ticketId) throws IOException {
+    @PostMapping(value = "print/tag/repair", produces = MediaType.APPLICATION_PDF_VALUE)
+    private ResponseEntity<byte[]> printRepairTag(@RequestParam Long ticketId) {
         Ticket ticket = ticketService.getTicket(ticketId);
-//        todo: Add the initial username-password somewhere in the user to do easy access
-        File image = documentService.createRepairTag(ticketId.toString(), ticket);
-        documentService.executePrint(image);
-        byte[] bytes = Files.readAllBytes(image.toPath());
-        return ResponseEntity.ok().contentType(MediaType.IMAGE_JPEG).body(bytes);
+        PdfAndImageDoc doc = documentService.createRepairTag(ticketId.toString(), ticket);
+        documentService.executePrint(doc.image());
+        byte[] bytes = doc.pdfBytes();
+        return ResponseEntity.ok().contentType(MediaType.APPLICATION_PDF).body(bytes);
     }
 
-    @PostMapping(value = "print/tag/price", produces = MediaType.IMAGE_PNG_VALUE)
-    private ResponseEntity<byte[]> printPriceTag(@RequestParam Long itemId) throws IOException {
+    @PostMapping(value = "print/tag/price", produces = MediaType.APPLICATION_PDF_VALUE)
+    private ResponseEntity<byte[]> printPriceTag(@RequestParam Long itemId) {
         InventoryItem item = inventoryItemService.getItem(itemId);
-//        todo: Add the initial username-password somewhere in the user to do easy access
 //        todo: add price to inventory item and pass inventory item object instead of its params
-        File image = documentService.createPriceTag(itemId.toString(), item.getBrand().getBrand(), item.getModel().getModel(), item.getOtherProperties().entrySet().stream().map(Objects::toString).collect(Collectors.toList()), 10f/*item.getPrice()*/);
-        documentService.executePrint(image);
-        byte[] bytes = Files.readAllBytes(image.toPath());
-        return ResponseEntity.ok().contentType(MediaType.IMAGE_JPEG).body(bytes);
+        List<String> properties = item.getOtherProperties().entrySet().stream().map(entry -> entry.getKey() + ": " + entry.getValue()).toList();
+        PdfAndImageDoc doc = documentService.createPriceTag(itemId.toString(), item.getBrand().getBrand(), item.getModel().getModel(), properties, 10f/*item.getPrice()*/);
+        documentService.executePrint(doc.image());
+        byte[] bytes = doc.pdfBytes();
+        return ResponseEntity.ok().contentType(MediaType.APPLICATION_PDF).body(bytes);
     }
 }
